--- a/codegen.yml
+++ b/codegen.yml
@@ -7,7 +7,7 @@ generates:
       contextType: ../prisma/IPrismaContext#IPrismaContext
       mapperTypeSuffix: Model
       mappers:
-        Member: '@prisma/client#Member'
+        User: '@prisma/client#User'
       inputMaybeValue: undefined | T
     plugins:
       - typescript
