--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@apollo/client": "^3.6.5",
     "@apollo/react-hooks": "^4.0.0",
     "@chakra-ui/cli": "^1.5.1",
+    "@chakra-ui/icons": "^2.0.16",
     "@chakra-ui/react": "^1.6.8",
     "@chakra-ui/theme-tools": "^1.2.1",
     "@emotion/react": "^11",
@@ -32,13 +33,14 @@
     "@prisma/client": "^3.14.0",
     "apollo-errors": "^1.9.0",
     "apollo-server-micro": "^3.7.0",
+    "eslint-config-next": "^13.1.3",
     "framer-motion": "^6",
     "graphql": "^16.5.0",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^13.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "4.4.3"
   },
   "devDependencies": {
