--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@apollo/react-hooks": "^4.0.0",
     "@chakra-ui/cli": "^1.5.1",
     "@chakra-ui/icons": "^2.0.16",
-    "@chakra-ui/react": "^1.6.8",
+    "@chakra-ui/react": "^2.4.9",
     "@chakra-ui/theme-tools": "^1.2.1",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@graphql-codegen/core": "^2.5.1",
     "@graphql-codegen/typescript-resolvers": "^2.6.4",
     "@graphql-tools/load-files": "^6.5.3",
@@ -33,8 +33,9 @@
     "@prisma/client": "^3.14.0",
     "apollo-errors": "^1.9.0",
     "apollo-server-micro": "^3.7.0",
+    "chakra-react-select": "^4.4.3",
     "eslint-config-next": "^13.1.3",
-    "framer-motion": "^6",
+    "framer-motion": "^8.5.3",
     "graphql": "^16.5.0",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
