--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "next": "^13.1.3",
+    "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "4.4.3"
