--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "typescript": "4.4.3"
   },
   "devDependencies": {
