--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.5",
     "@apollo/react-hooks": "^4.0.0",
+    "@auth/prisma-adapter": "^1.0.0",
     "@chakra-ui/cli": "^1.5.1",
     "@chakra-ui/icons": "^2.0.16",
     "@chakra-ui/react": "^2.4.9",
@@ -30,7 +31,7 @@
     "@graphql-tools/load-files": "^6.5.3",
     "@graphql-tools/merge": "^8.1.1",
     "@graphql-tools/schema": "^8.3.2",
-    "@prisma/client": "^3.14.0",
+    "@prisma/client": "^4.16.2",
     "apollo-errors": "^1.9.0",
     "apollo-server-micro": "^3.7.0",
     "chakra-react-select": "^4.4.3",
